manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: ansel
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ansel
  namespace: ansel
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ansel
  template:
    metadata:
      labels:
        app: ansel
    spec:
      containers:
      - name: ansel
        image: 4lch4/ansel:latest
        ports:
        - containerPort: 4242
        livenessProbe:
          httpGet:
            path: /ansel/healthz
            port: 4242
          initialDelaySeconds: 25
        readinessProbe:
          httpGet:
            path: /ansel/healthz
            port: 4242
          initialDelaySeconds: 25
---
apiVersion: v1
kind: Service
metadata:
  name: ansel
  namespace: ansel
spec:
  type: ClusterIP
  ports:
    - port: 4242
      name: web
  selector:
    app: ansel
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ansel-ingress
  namespace: ansel
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: 4lch4.com
    http:
      paths:
      - path: /ansel
        backend:
          serviceName: ansel
          servicePort: 4242
