manifest.yml
apiVersion: v1
kind: Namespace
metadata:
  name: '#{APP_NAMESPACE}#'
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: '#{APP_LOWER_NAME}#'
  namespace: '#{APP_NAMESPACE}#'
spec:
  replicas: 2
  selector:
    matchLabels:
      app: '#{APP_LOWER_NAME}#'
  template:
    metadata:
      labels:
        app: '#{APP_LOWER_NAME}#'
    spec:
      containers:
        - name: '#{APP_LOWER_NAME}#'
          image: '#{DockerRepo}#/#{APP_LOWER_NAME}#:#{APP_VERSION}#'
          resources:
            limits:
              cpu: '600m'
              memory: '750Mi'
            requests:
              cpu: '200m'
              memory: '250Mi'
          ports:
            - containerPort: #{APP_PORT}#
          livenessProbe:
            httpGet:
              path: '#{API_PREFIX}#/health/liveness'
              port: #{APP_PORT}#
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 10
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: '#{API_PREFIX}#/health/readiness'
              port: #{APP_PORT}#
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 10
            timeoutSeconds: 10
---
kind: Service
apiVersion: v1
metadata:
  name: '#{APP_LOWER_NAME}#'
  namespace: '#{APP_NAMESPACE}#'
  labels:
    app: '#{APP_LOWER_NAME}#'
spec:
  type: ClusterIP
  ports:
    - port: #{APP_PORT}#
      name: web
  selector:
    app: '#{APP_LOWER_NAME}#'
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: '#{APP_LOWER_NAME}#'
  namespace: '#{APP_NAMESPACE}#'
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: '#{DNS_HOST_NAME}#'
      http:
        paths:
          - path: /api
            backend:
              serviceName: '#{APP_LOWER_NAME}#'
              servicePort: #{APP_PORT}#
      tls:
        - hosts:
            - '#{DNS_HOST_NAME}#'
